# Granite

./: .gitignore  .gitmodules  CMakeLists.txt  OVERVIEW.md  README.md  TODO.md
application/: application.cpp  application.hpp  application_cli_wrapper.cpp  application_cli_wrapper.hpp  application_entry.cpp  application_wsi.cpp  application_wsi_events.hpp  global_managers.cpp  global_managers.hpp  scene_viewer_application.cpp  scene_viewer_application.hpp
application/events/: application_events.hpp
application/input/: input.cpp  input.hpp  input_linux.cpp  input_linux.hpp  xinput_windows.cpp  xinput_windows.hpp
audio/: audio_aaudio.cpp  audio_aaudio.hpp  audio_events.hpp  audio_interface.cpp  audio_interface.hpp  audio_mixer.cpp  audio_mixer.hpp  audio_oboe.cpp  audio_oboe.hpp  audio_opensl.cpp  audio_opensl.hpp  audio_pulse.cpp  audio_pulse.hpp  audio_resampler.cpp  audio_resampler.hpp  audio_wasapi.cpp  audio_wasapi.hpp  vorbis_stream.cpp  vorbis_stream.hpp
audio/dsp/: audio_fft_eq.cpp  audio_fft_eq.hpp  dsp.cpp  dsp.hpp  pole_zero_filter_design.cpp  sinc_resampler.cpp  sinc_resampler.hpp  tone_filter.cpp  tone_filter.hpp  tone_filter_stream.cpp  tone_filter_stream.hpp
compiler/: compiler.cpp  compiler.hpp
ecs/: ecs.cpp  ecs.hpp
event/: event.cpp  event.hpp
filesystem/: filesystem.cpp  filesystem.hpp  path.cpp  path.hpp
filesystem/android/: android.cpp  android.hpp
filesystem/linux/: os_filesystem.cpp  os_filesystem.hpp
filesystem/netfs/: fs-netfs.cpp  fs-netfs.hpp
filesystem/windows/: os_filesystem.cpp  os_filesystem.hpp
granite/application/: application.cpp  application.hpp  application_cli_wrapper.cpp  application_cli_wrapper.hpp  application_entry.cpp  application_wsi.cpp  application_wsi.hpp  application_wsi_events.hpp  global_managers.cpp  global_managers.hpp  scene_viewer_application.cpp  scene_viewer_application.hpp
granite/audio/: audio_events.hpp  audio_interface.cpp  (+11 more)
math/: aabb.cpp  aabb.hpp  frustum.cpp  frustum.hpp  interpolation.cpp  interpolation.hpp  math.cpp  math.hpp  render_parameters.hpp  simd.hpp  transforms.cpp  transforms.hpp
network/: looper.cpp  netfs.hpp  netfs_server.cpp  network.hpp  socket.cpp  tcp_listener.cpp
physics/: physics_system.cpp  physics_system.hpp
renderer/: abstract_renderable.hpp  animation_system.cpp  animation_system.hpp  camera.cpp  common_renderer_data.cpp  common_renderer_data.hpp  cpu_rasterizer.cpp  cpu_rasterizer.hpp  ground.cpp  ground.hpp  material.cpp  material.hpp  material_manager.cpp  material_manager.hpp  material_util.cpp  material_util.hpp  mesh.cpp  mesh.hpp  mesh_manager.cpp  mesh_manager.hpp  mesh_util.cpp  mesh_util.hpp  ocean.cpp  ocean.hpp  render_components.hpp  render_context.cpp  render_context.hpp  render_graph.cpp  render_graph.hpp  render_queue.cpp  render_queue.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_loader.cpp  scene_loader.hpp  scene_renderer.cpp  scene_renderer.hpp  shader_suite.cpp  (+5 more)
scene_formats/: camera_export.cpp  camera_export.hpp  gltf.cpp  gltf.hpp  gltf_export.cpp  gltf_export.hpp  light_export.cpp  light_export.hpp  memory_mapped_texture.cpp  memory_mapped_texture.hpp  obj.cpp  obj.hpp  rgtc_compressor.cpp  rgtc_compressor.hpp  scene_formats.cpp  scene_formats.hpp  texture_compression.cpp  texture_compression.hpp  texture_decoder.cpp  texture_decoder.hpp  texture_files.cpp  texture_files.hpp  texture_utils.cpp  texture_utils.hpp  tmx_parser.cpp
tests/: CMakeLists.txt  async_spec_constant.cpp  audio_application.cpp  audio_test.cpp  bandlimited_pixel_test.cpp  basic_compute.cpp  bindless_test.cpp  clustering_visualizer.cpp  coherency.cpp  conservative_raster_test.cpp  cooperative_task_test.cpp  cube_array_test.cpp  debug_channel.cpp  display_timing.cpp  divergent_lod_test.cpp  ecs_test.cpp  fragment_output_components.cpp  image_query_lod.cpp  imported_host.cpp  intrusive_ptr_test.cpp  linear_image_test.cpp  lru_cache_test.cpp  mrt_color_mask.cpp  multi_draw_indirect.cpp  multiview_test.cpp  pcf_test.cpp  render_graph_sandbox.cpp  sampler_precision.cpp  simd_test.cpp  subgroup.cpp  texture_decoder_test.cpp  thread_group_test.cpp  tone_filter_bench.cpp  triangle.cpp  ui_sandbox.cpp  ycbcr_sampling.cpp
threading/: task_composer.cpp  task_composer.hpp  thread_group.cpp  thread_group.hpp
tools/: aa_bench.cpp  bench_aa.py  bitmap_mesh.cpp  brdf_lut_generate.cpp  build_smaa_luts.cpp  convert_cube_to_environment.cpp  convert_equirect_to_environment.cpp  gltf_repacker.cpp  gtx_cat.cpp  gtx_convert.cpp  image_compare.cpp  image_packer.cpp  obj_to_gltf.cpp  slangmosh.cpp  sweep_scene.py  texture_viewer.cpp
ui/: click_button.cpp  click_button.hpp  flat_renderer.cpp  flat_renderer.hpp  font.cpp  font.hpp  horizontal_packing.cpp  horizontal_packing.hpp  image_widget.cpp  image_widget.hpp  label.cpp  label.hpp  slider.cpp  slider.hpp  sprite.cpp  sprite.hpp  toggle_button.cpp  toggle_button.hpp  ui_manager.cpp  ui_manager.hpp  vertical_packing.cpp  vertical_packing.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
util/: aligned_alloc.cpp  aligned_alloc.hpp  bitmap_to_mesh.cpp  bitmap_to_mesh.hpp  cli_parser.cpp  generational_handle.hpp  intrusive_hash_map.hpp  logging.hpp  message_queue.cpp  message_queue.hpp  object_pool.hpp  string_helpers.cpp  timeline_trace_file.cpp  timeline_trace_file.hpp  timer.cpp  timer.hpp  variant.hpp
viewer/: CMakeLists.txt  physics_sandbox.cpp  viewer.cpp
vulkan/: buffer_pool.cpp  buffer_pool.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  cookie.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  device_fossilize.cpp  event_manager.hpp  fence.hpp  fence_manager.hpp  image.cpp  image.hpp  limits.hpp  memory_allocator.cpp  memory_allocator.hpp  pipeline_event.cpp  pipeline_event.hpp  query_pool.cpp  query_pool.hpp  render_pass.cpp  render_pass.hpp  renderdoc_capture.cpp  sampler.hpp  semaphore.cpp  semaphore.hpp  semaphore_manager.hpp  shader.cpp  texture_format.cpp  texture_format.hpp  vulkan_debug.hpp  vulkan_headers.hpp  wsi.cpp  wsi.hpp  (+2 more)
(+297 files in other folders)
